added camille's template

--- a/05_Advection_Diffusion/Advection_Diffusion.tex
+++ b/05_Advection_Diffusion/Advection_Diffusion.tex
@@ -391,7 +391,14 @@ The impacts of matrix diffusion on the initial breakthrough of the solute plume 
 
 The lower graph shows the predicted cleanup concentration profiles following complete elimination of a source area. The advection-dispersion model (gray line) predicts a clean-water front arriving at a time corresponding to the average groundwater velocity. The advection-diffusion model (black line) predicts that concentrations will start to decline more rapidly than expected (based on the average groundwater velocity) as clean water rapidly migrates through the highest-permeability strata. However, low but significant contaminant concentrations linger much longer (tailing) due to diffusive contaminant mass exchange between zones of high and low permeability.
 
-\subsection{Plug Flow through two media}
+\begin{equation}
+\frac{d C\nu_vc}{d t} = \Sigma Q_{in} \cdot C_{in} - \Sigma Q_{out} \cdot C_{out} + \Sigma R V_{cv}
+\end{equation}
+
+
+\begin{equation}
+  \frac{\partial C}{\partial t} = - \nu \frac{\partial C}{\partial x}
+\end{equation}
 
 
 \subsection{Dissolved Oxygen Consumed in a Porous Media}
