--- a/05_Advection_Diffusion/Advection_Diffusion.tex
+++ b/05_Advection_Diffusion/Advection_Diffusion.tex
@@ -400,6 +400,16 @@ The lower graph shows the predicted cleanup concentration profiles following com
   \frac{\partial C}{\partial t} = - \nu \frac{\partial C}{\partial x}
 \end{equation}
 
+\begin{equation}
+C(x,t) = \frac{M}{A \sqrt{4\pi D_d t}} \cdot \exp[\frac{−x^{\prime 2}}{4D_d t}]
+\end{equation}
+
+Where
+M = mass of conservative material in the spike\\
+Dd = axial dispersion coefficient [L2/T],\\
+x’ = x - Ut, U = longitudinal advective velocity in the reactor,\\
+A is the cross-sectional area of the reactor.\\
+
 
 \subsection{Dissolved Oxygen Consumed in a Porous Media}
 
